[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/OpenDyslexic-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://src/GUI/Dialog/Dialog.gd" type="Script" id=2]
[ext_resource path="res://src/GUI/Dialog/DialogMenuContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/GUI/Dialog/CharacterFrame.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/images/gui/quemamais_talk.png" type="Texture" id=5]
[ext_resource path="res://assets/images/gui/quemamais_normal.png" type="Texture" id=6]
[ext_resource path="res://src/GUI/Dialog/Subtitles.gd" type="Script" id=7]
[ext_resource path="res://src/GUI/Dialog/DialogButton.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "show_dialog_menu"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("DialogMenuContainer:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 520, -0.25, 0, 0.25, 0, 520, -0.25, 0, 0.25, 0, 520, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("DialogMenuContainer:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1024, -0.25, 0, 0.25, 0, 688, -0.25, 0, 0.25, 0, 688, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("DialogMenuContainer:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -45, -0.25, 0, 0.25, 0, -5.99691, -0.122885, -33.7577, 0.0605001, 21.7014, 0, -0.107055, 29.6898, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("DialogMenuContainer:modulate:r")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("DialogMenuContainer:modulate:g")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("DialogMenuContainer:modulate:b")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("DialogMenuContainer:modulate:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4 )
}

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Dialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
use_click_to_progress = true

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show_dialog_menu = SubResource( 1 )

[node name="DialogMenuContainer" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
margin_left = -760.0
margin_top = 64.0
margin_right = -67.0
margin_bottom = 269.0
rect_rotation = -45.0
rect_pivot_offset = Vector2( 584, 102 )

[node name="CharacterFrame" parent="." instance=ExtResource( 4 )]

[node name="Subtitles" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -576.0
margin_top = -59.9999
margin_right = 576.0
margin_bottom = -17.9999
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "subtitles will display here"
align = 1
autowrap = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Subtitles"]

[node name="DialogButton" type="TextureButton" parent="."]
margin_left = 1033.0
margin_top = 722.0
margin_right = 1065.0
margin_bottom = 754.0
rect_scale = Vector2( 4, 4 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="DialogButton"]
